--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -81,6 +81,10 @@
                                      rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.id ne null and rachunekZlecenieView.rachunekdoumowyzlecenia.pasekwynagrodzen eq null}">
                          <p:confirm type="popup" header="Usuwanie rachunku do umowy" message="Na pewno usunąć rachunek?" icon="pi pi-exclamation-triangle"/>
                     </p:commandButton>
+<!--                    <p:commandButton value="usuń" actionListener="#{rachunekZlecenieView.usun()}" update="RachunekZleceniaForm" styleClass="buttonnorm2" 
+                                     >
+                         <p:confirm type="popup" header="Usuwanie rachunku do umowy" message="Na pewno usunąć rachunek?" icon="pi pi-exclamation-triangle"/>
+                    </p:commandButton>-->
                     <h:outputText value="Rachunek ujęty na liście płac. Nie można usunąć rachunku." rendered="#{rachunekZlecenieView.rachunekdoumowyzlecenia.id ne null and rachunekZlecenieView.rachunekdoumowyzlecenia.pasekwynagrodzen ne null}"/>
                 </p:panelGrid>
                 </p:outputPanel>
