--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -274,7 +274,7 @@
                     <f:facet name="header">
                         <h:outputText value=""/>
                     </f:facet>
-                    <p:commandButton icon="pi pi-trash" actionListener="#{kartaWynagrodzenView.usunPIT11(itempity11)}" update="akordeon:wystawionepit11">
+                    <p:commandButton icon="pi pi-trash" actionListener="#{kartaWynagrodzenView.usunPIT11(itempity11)}" update="akordeon:wystawionepit11 akordeon:KartyWynangrodzenPITForm">
                         <p:confirm type="popup" header="Potwierdzenie" message="Usunąć deklaracje?" icon="pi pi-exclamation-triangle"/>
                     </p:commandButton>
                 </p:column>
